# duckdb-appender

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: publish.yaml
appender/: __init__.py  appender.py
duckdb_appender/: appender.py  errors.py
examples/: example.py
pyappender/: __init__.py  constants.py  errors.py  pyappender.py
test/: test_appender.py  test_errors.py  test_pyappender.py
