[project]
name = "duckdb-appender"
version = "0.2.0"
authors = [
    {name = "Toan Phan", email = "toanphan.dev@gmail.com"},
]
description = "A DuckDB appender for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.0.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pytest>=8.3.3",
    "pytz>=2024.2",
]
